<resources>
    <string name="app_name">GestFutsal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email"></string>
    <string name="pass"></string>
    <string name="athlete">Athlete</string>
    <string name="n">N</string>
    <string name="login">Login</string>
    <string name="what_s_your_password">What\'s your password?</string>
    <string name="password">Password:</string>
    <string name="what_is_your_email">What is your email?</string>
    <string name="team_level_sub">Team level: (Sub)</string>
    <string name="what_is_the_team_name">What is the team name?</string>
    <string name="team_name">Team name:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="add_team">Add team</string>
    <string name="what_is_the_address">What is the address ?</string>
    <string name="address">Address:</string>
    <string name="what_is_the_phone_contact">What is the Phone Contact?</string>
    <string name="contact_phone">Contact (Phone):</string>
    <string name="what_is_the_email_contact">What is the email contact?</string>
    <string name="contact_email">Contact (Email):</string>
    <string name="team">Team:</string>
    <string name="genre">Genre:</string>
    <string name="number">Number:</string>
    <string name="what_is_the_athlete_s_name">What is the athlete\'s name?</string>
    <string name="name">Name:</string>
    <string name="delete1">Delete</string>
    <string name="save1">Save</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="athlete_details">Athlete details</string>
    <string name="edit">Edit</string>
    <string name="team_details">Team details</string>
    <string name="teams">Teams</string>
    <string name="create_team">Create Team</string>
    <string name="athletes">Athletes</string>
    <string name="create_athlete">Create athlete</string>

</resources>