<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateEditTeamActivity"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_team"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/bg_group_blue_top"
            android:padding="15dp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bt_cet_exit_team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/arrow_circle_left" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_cet_register_team"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:height="40dp"
                    android:background="@drawable/bg_button_green"
                    android:text="@string/register" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_cet_update_team"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:height="40dp"
                    android:background="@drawable/bg_button_amber_100"
                    android:text="@string/save"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_cet_delete_team"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:height="40dp"
                    android:background="@drawable/bg_button_red_300"
                    android:text="@string/delete"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:orientation="vertical"
                android:background="@drawable/bg_group">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10sp"
                    android:gravity="start"
                    android:text="@string/team_name"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/et_cet_nameTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/what_is_the_team_name"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:gravity="start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:orientation="vertical"
                android:background="@drawable/bg_group">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10sp"
                    android:gravity="start"
                    android:text="@string/team_level_sub"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/et_cet_levelTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Ex: 11"
                    android:maxLength="2"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:gravity="start" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>