<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_group"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_row_athelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="10"
                android:gravity="start"
                android:text="@string/athlete"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_row_atheleteNun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/n"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/tv_row_atheleteTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/team"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

