<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LogInActivity"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/bg_group_blue_top"
        android:padding="15dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:background="@drawable/bg_group">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10sp"
            android:gravity="start"
            android:text="Email:"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_Login_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/what_is_your_email"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="start" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:background="@drawable/bg_group">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10sp"
            android:gravity="start"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_Login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/what_s_your_password"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="start" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_Login_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10sp"
        android:height="40dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/login"
        />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_GoAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:height="40dp"
            android:background="@drawable/bg_button_amber_100"
            android:text="ABOUT" />

    </LinearLayout>

</LinearLayout>