<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.ViewAthletesActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_va_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/athletes"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/bg_group_blue_top"
            android:padding="15dp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/bt_va_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/arrow_circle_left" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_va_newAthelet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10sp"
                android:layout_weight="4"
                android:height="40dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/create_athlete" />

            <ImageView
                android:id="@+id/bt_va_orderByAsc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/arrow_circle_down" />

            <ImageView
                android:id="@+id/bt_va_orderByDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/arrow_circle_up" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_group_blue"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_row_athelete"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_row_atheleteNun"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:text="Nº"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_Atheletes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>